# skills

./: .gitignore  README.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml
.github/workflows/: complexity.yml  tests.yml
ai-tech-brief/: RSS_FEED_STATUS.md  SKILL.md  config.example.json  config.json
ai-tech-brief/references/: sources.md
ai-tech-brief/scripts/: generate_brief.py  setup_blogwatcher.sh  test_generate_brief.py
briefs/: SKILL.md  config.ai-tech.json  config.portfolio.json
briefs/prompts/: ai-tech-brief.md  portfolio-brief.md
briefs/references/: portfolio-sources.md  sources.md
briefs/scripts/: fetch_prices.py  fetcher.py  generate_brief.py  renderer.py  summarizer.py  test_generate_brief.py  test_openbb_integration.py
briefs/templates/: ai-tech-brief.md  portfolio-brief.md
check-market-movers/: SKILL.md  config.json
check-market-movers/scripts/: check-market-movers.py  test_check_market_movers.py
local-repo-sanitization/: SKILL.md  config.json
local-repo-sanitization/scripts/: check-health.sh  sanitize-repo.sh  test_sanitize_repo.py
openbb-sync/: SKILL.md  hourly_sync.sh  sync.sh
paper-digest/: SKILL.md
paper-digest/prompts/: digest-prompt.md
paper-digest/scripts/: digest_paper.py  test_digest_paper.py
paper-digest/templates/: digest-output.md
paper-queue/: SKILL.md  config.json
paper-queue/prompts/: suggest-prompt.md
paper-queue/scripts/: paper_queue.py  scorer.py  (+8 more)
paper-summarizer/: SKILL.md
shared/: llm_utils.py  logging_utils.py  test_logging_utils.py
wiki-manager/: SKILL.md  config.json
wiki-query/: SKILL.md
(+28 files in other folders)
